--- a/README
+++ b/README
@@ -3,13 +3,17 @@
 Basics 
 
 1. Hello,World!
+![1](img/1.png)
 
 2. Variables and Data Types
+![2](img/2.png)
 
 3. Arrays
 
+![3](img/3.png)
 4. Multidimensional Arrays
+![4](img/4.png)
 
 5. Conditions
-
+![5](img/5.png)
 
